[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/menus/textures/GUI.png" type="Texture" id=3]
[ext_resource path="res://ui/menus/fonts/bitmgothic.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/menus/fonts/MinimalPixel.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 98, 46, 13 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0
modulate_color = Color( 0.835294, 0.835294, 0.835294, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0
modulate_color = Color( 0.545098, 0.545098, 0.545098, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 81, 46, 14 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 40
custom_constants/margin_left = 20
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 40.0
margin_right = 460.0
margin_bottom = 245.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 85.0
margin_right = 355.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "Perla Knight"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 440.0
margin_bottom = 205.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 176.0
margin_top = 51.0
margin_right = 263.0
margin_bottom = 105.0
mouse_filter = 0
custom_constants/separation = 22

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 87.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../LoadGameButton")
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
text = "New Game"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 38.0
margin_right = 87.0
margin_bottom = 54.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../LoadGameButton")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
